--- a/_includes/inspiration/card.html
+++ b/_includes/inspiration/card.html
@@ -1,6 +1,6 @@
-<div class="motivation-card pink-box-shadow-left w-100
-	{% if include.image_scale == 'true' %} motivation-card-image-scale {% endif %}">
-	<img class="lazy w-100 h-100 motivation-card-image" src="{{include.image}}">
+<div class="inspiration-card pink-box-shadow-left w-100
+	{% if include.image_scale == 'true' %} inspiration-card-image-scale {% endif %}">
+	<img class="lazy w-100 h-100 inspiration-card-image" src="{{include.image}}">
 	<div class="inspiration-card-text">
 		{% if include.quote and include.quote != "" and include.quote != nil %}
 			<p class="inspiration-quote">{{ include.quote }}</p>
