--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -6,6 +6,7 @@
 		<main id="swup" class="transition-fade">
 			{{content}}
 			{% include blog_post/newsletter.html %}
+			{% include instagram.html %}
 		</main>
 		{% include footer.html %}
 	</body>
