--- a/assets/css/main_css_file.scss
+++ b/assets/css/main_css_file.scss
@@ -7,6 +7,6 @@
 @import "nav";
 @import "footer";
 @import "newsletter";
-@import "motivation";
+@import "inspiration";
 @import "home";
 @import "static";
