--- a/_sass/_inspiration.scss
+++ b/_sass/_inspiration.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-.motivation-card {
+.inspiration-card {
 	text-align: center;
 	margin: 0 15px 50px;
 	min-height: 600px;
@@ -19,7 +19,7 @@
 	}
 }
 
-.motivation-card-image-scale {
+.inspiration-card-image-scale {
 	&:hover {
 		img {
 			@include image-scale-up(1.1);
@@ -52,18 +52,18 @@
 	line-height: 40px;
 }
 
-.motivation-1 {
+.inspiration-1 {
 	padding: 0 15px;
 }
 
-.motivation-1 .inspiration-quote {
+.inspiration-1 .inspiration-quote {
 	@media (min-width: $lg) {
 		font-size: 32px;
 		line-height: 50px;
 	}
 }
 
-.motivation-2 .inspiration-quote {
+.inspiration-2 .inspiration-quote {
 }
 
 .inspiration-author {
@@ -74,7 +74,7 @@
 	letter-spacing: 2px;
 }
 
-/* INDIVIDUAL MOTIVATION PAGE */
+/* INDIVIDUAL inspiration PAGE */
 .share-bar {
 	padding: 30px 0;
 	text-align: center;
