--- a/_sass/_post_page.scss
+++ b/_sass/_post_page.scss
@@ -1,41 +1,52 @@
 @import "variables";
 
-.post-page-container {
-	@include container-widths;
-}
-
-.post-page-container-above-image {
-	
-}
-
-.post-page-container-below-image {
-	padding-bottom: 100px;
-}
-
-.post-page-featured-image {
-	height: 700px;
-	width: 100%;
-	object-fit: cover;
-	margin: 50px 0 50px;
-}
-
 .post-page-title {
-	font-size: 40px;
+	text-align: center;
+	margin-bottom: 30px;
 }
 
 .post-page-subheading {
-	font-size: 18px;
-	color: $light-gray-text;
-	line-height: 32px;
-	margin: 20px 0;
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.post-page-media-container {
+	margin: 40px 0 50px;
+	background-color: white;
+}
+
+.post-page-video-container {
+	display: flex;
+	iframe {
+		@include pink-box-shadow-left;
+		margin: 0 auto;
+		width: 100%;
+		height: 500px;
+	}
+}
+
+.post-page-image-container {
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+	@include pink-box-shadow-left;
+}
+
+.post-page-image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .post-page-date-n-tags {
-	margin-bottom: 20px;
+	justify-content: center;
 }
 
-.divide-metadata-n-content {
-	margin-bottom: 30px;
+.post-content {
+	img {
+		max-height: 500px;
+		margin: 20px 0 30px;
+	}
 }
 
 .next-n-prev-post-navigation {
