--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -61,6 +61,13 @@ p, li {
 	color: $light-gray-text;
 }
 
+span {
+	font-family: $link-font;
+	font-size: 12px;
+	text-transform: uppercase;
+	letter-spacing: 1.32px;
+}
+
 .page-title {
 	font-family: $title-font;
 	font-size: 40px;
