--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -1,1 +1,7 @@
-<div id="instafeed"></div>
+<section id="instagram" class="instagram-section pink-bg">
+	<div class="container home-container">
+		<h1 class="home-section-title">Latest Instagram Posts</h1>
+		<div id="instafeed" class="row">
+		</div>
+	</div>
+</section>
