--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -3,8 +3,8 @@
 footer {
 	padding: 50px 30px 0;
 	width: 100%;
-	border-top: 1px solid $super-light-gray;
-	margin-top: 50px;
+	/*border-top: 1px solid $super-light-gray;
+	margin-top: 50px;*/
 }
 
 .footer-content {
