add actual instagram feed and favicon

--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -1,7 +1,7 @@
 <section id="instagram" class="instagram-section pink-bg">
 	<div class="container home-container">
-		<h1 class="home-section-title">Latest Instagram Posts</h1>
-		<div id="instafeed" class="row">
+		<h1 class="home-section-title">{{site.data.general.instagram_feed_title}}</h1>
+		<div id="instafeed">
 		</div>
 	</div>
 </section>
