--- a/_layouts/inspiration_item.html
+++ b/_layouts/inspiration_item.html
@@ -1,7 +1,6 @@
 ---
-layout: default
+layout: pink_background
 js_file: '/assets/js/inspiration_item.js'
-pink_background: true
 ---
 <div class="container">
 	<h5 class="page-mini-title">Daily Inspiration</h5>
