--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,6 +1,5 @@
 ---
-layout: default
-pink_background: true
+layout: pink_background
 ---
 <div class="container">
 	<h5 class="page-mini-title">Blog</h5>
