--- a/_includes/blocks/recent-blog-post.html
+++ b/_includes/blocks/recent-blog-post.html
@@ -1,6 +1,6 @@
 <section id="{{include.block.id}}" class="{% if include.block.background_color == 'pink' %}pink-bg {% endif %}">
 	<div class="container home-container">
-		<h1 class="home-section-title">From The Blog</h1>
+		<h1 class="home-section-title">{% if include.block.title %}{{include.block.title}}{% else %}Latest Blog Post{% endif%}</h1>
 		{% include blog_post/card.html post=site.posts.first %}
 		<div class="button-center-container home-see-more-button">
 			<a href="/blog" class="button">See More Posts</a>
