--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -2,5 +2,5 @@
 	<h3 class="newsletter-title">{{site.data.general.newsletter.title}}</h3>
 	<p class="newsletter-description">{{site.data.general.newsletter.description}}</p>
 	<!-- Begin Mailchimp Signup Form -->
-	{% include blog_post/mailchimp.html %}
+	{% include mailchimp.html %}
 </div>
