--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -5,7 +5,7 @@
 		{% include nav.html %}
 		<main id="swup" class="transition-fade">
 			{{content}}
-			{% include blog_post/newsletter.html %}
+			{% include newsletter.html %}
 			{% include instagram.html %}
 		</main>
 		{% include footer.html %}
