--- a/_includes/blocks/image-left-text-right.html
+++ b/_includes/blocks/image-left-text-right.html
@@ -14,9 +14,8 @@
 					{% if include.block.text and include.block.text != "" and include.block.text != nil %}
 						<p>{{include.block.text}}</p>
 					{% endif %}
-					{% if include.block.button.link and include.block.button.link != "" and include.block.button.link != nil %}
-						<a class="button home-button button-large-padding" href="{% include link-renderer.html link=include.block.button.link %}">{{include.block.button.text}}</a>
-					{% endif %}
+					{% include button-renderer.html button=include.block.button
+	  								  button_classes="home-button button-large-padding" %}
 				</div>
 			</div>
 		</div>
