--- a/_includes/blocks/content.html
+++ b/_includes/blocks/content.html
@@ -1,5 +1,5 @@
 <section id="{{include.block.id}}" class="{% if include.block.background_color == 'pink' %}pink-bg {% endif %}">
 	<div class="content container-widths {% if include.block.centered %} centered-content {% endif %}">
-		{{content}}
+		{{ include.block.text | markdownify }}
 	</div>
 </section>
