--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -21,3 +21,5 @@
 <!-- <script src="/assets/js/swup.min.js" type="text/javascript"></script> -->
 <!-- <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script> -->
 <!-- <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script> -->
+
+<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"db3b35f68d7e4231cb00ee76e","lid":"943cb68f5d","uniqueMethods":true}) })</script>
