--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .carousel-indicators li {
 	width: 10px;
 	height: 10px;
@@ -87,8 +89,10 @@
 	@media (min-width: $md) {
 		margin-bottom: 0;
 	}
+
 	img {
-		height: 100%;
+		background-color: $super-light-gray;
+		/*height: 300px;*/
 		width: 100%;
 		object-fit: cover;
 	}
