--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,6 @@
 <!-- Jquery -->
 <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <!-- Unveil2 -->
 <script src="/assets/js/unveil2.min.js"></script>
 <!-- Instafeed -->
@@ -21,5 +22,3 @@
 <!-- <script src="/assets/js/swup.min.js" type="text/javascript"></script> -->
 <!-- <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script> -->
 <!-- <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script> -->
-
-<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"db3b35f68d7e4231cb00ee76e","lid":"943cb68f5d","uniqueMethods":true}) })</script>
