--- a/_layouts/inspiration_item.html
+++ b/_layouts/inspiration_item.html
@@ -1,6 +1,7 @@
 ---
 layout: pink_background
-js_file: '/assets/js/inspiration_item.js'
+js_files: 
+- '/assets/js/inspiration_item.js'
 ---
 <div class="container">
 	<h5 class="page-mini-title">Daily Inspiration</h5>
