fix images not unveiling, again

--- a/_sass/_inspiration.scss
+++ b/_sass/_inspiration.scss
@@ -7,7 +7,7 @@
 	height: 70vh;
 	max-height: 1000px;
 	position: relative;
-	background-color: $dark-gray-text;
+	background-color: $light-gray;
 	overflow: hidden;
 	@media (min-width: $md) {
 		margin-bottom: 30px;
