--- a/_layouts/inspiration_item.html
+++ b/_layouts/inspiration_item.html
@@ -9,6 +9,7 @@ js_files:
 	<div class="w-100 inspiration-1">
 		{% include inspiration/card.html quote=page.quote author=page.author image=page.image url=page.url %}
 	</div>
+	{{ site.data.general.adsense_code }}
 	<div class="share-bar">
 		<h4>Share this</h4>
 		{% include share-icons.html %}
