--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     {% else %} {{ site.title }}
     {% endif %}
   </title>
-  <meta name="description" content="{{ site.description }}">
+  <meta name="description" content="{{ site.data.site_description }}">
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
