add adsense header code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,6 @@
   <meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
+  {{ site.data.general.adsense_header_code }}
+
 </head>
