--- a/_includes/blocks/image-left-text-right.html
+++ b/_includes/blocks/image-left-text-right.html
@@ -15,7 +15,8 @@
 						{{include.block.text | markdownify }}
 					{% endif %}
 					{% include button-renderer.html button=include.block.button
-	  								  button_classes="home-button button-large-padding" %}
+	  								  button_classes="home-button button-large-padding"
+	  								  container_classes="home-see-more-button" %}
 				</div>
 			</div>
 		</div>
