--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
     <ul class="navbar-nav ml-auto nav-social-links">
       {% for link in site.data.social_media %}
         <li class="nav-item">
-          <a href="{{link.url}}" target="_blank">
+          <a href="{% include social_media_link_renderer.html link=link %}" target="_blank">
             {% include social_media_icon_renderer.html link=link %}
           </a>
         </li>
